Scaling images in feed to fit.  Correcting issue causing results route to flicker while ingest agent running.

--- a/app/src/css/result_item_styles.css
+++ b/app/src/css/result_item_styles.css
@@ -82,11 +82,15 @@
 
 /*Feed item with one image*/
 .singleImage-Image {
-    max-width: 100%;
-    max-height: 220px;
-    margin: auto;
+    /*max-width: 100%;*/
+    /*max-height: 220px;*/
+    /*margin: auto;*/
+    /*display: block;*/
+    /*margin-top: 20px;*/
     margin-top: 20px;
-    display: block;
+    width: 100%;
+    height: 216px;
+    object-fit: cover;
 }
 
 .singleImage-TextContainer {
